<resources>
    <string name="nome_da_app">Code4All</string>
    <string name="logo">Logo Oficial do Code4All</string>
    <string name="realizado_por">Powered By</string>
    <string name="autor">José Xavier</string>
    <string name="descricao_intro_um">Aprenda mais sobre o mundo da\nprogramação!</string>
    <string name="descricao_intro_dois">Se tiver alguma dúvida basta criar\numa pergunta</string>
    <string name="descricao_intro_tres">Torne-se um mestre da\nprogramação!</string>
    <string name="autenticacao">Autenticação</string>
    <string name="slogan">Aprender a programar é\ndivertido e simples!</string>
    <string name="botao_email">Email</string>
    <string name="botao_facebook">Facebook</string>
    <string name="botao_twitter">Twitter</string>
    <string name="utilizador_novo">Primeira vez?</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="entrar">Entrar</string>
    <string name="informacao_login">Entre na sua conta agora mesmo!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
    <string name="informacao_registro">Crie uma conta agora\nmesmo é grátis e rápido</string>
    <string name="nome">Nome</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="empresa">Empresa</string>
    <string name="utilizador">Utilizador</string>
    <string name="Registar">registar</string>
    <string name="conta">Já tem conta?</string>
    <string name="nif">Número de Identificação Fiscal</string>
    <string name="opcao_quizes">Quizes</string>
    <string name="populares">Populares</string>
    <string name="abrir_drawer">Abrir</string>
    <string name="fechar_drawer">Fechar</string>
    <string name="menu">Menu</string>
    <string name="opcao_inicio">Início</string>
    <string name="opcao_forum">Fórum</string>
    <string name="opcao_pontuacao">Pontuação</string>
    <string name="opcao_conta">Conta</string>
    <string name="opcao_ofertas">Ofertas</string>
    <string name="opcao_definicoes">Definições</string>
    <string name="opcao_logout">Sair</string>
    <string name="versao_da_app">Code4all 1.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_principal2">PrincipalActivity2</string>
    <string name="notificacoes">Notificações</string>
    <string name="carregando">Carregando...</string>
    <string name="matricular">Matricular</string>
    <string name="valor_nulo">0.0</string>
    <string name="html">HTML</string>
    <string name="css">CSS</string>
    <string name="python">PYTHON</string>
    <string name="java">JAVA</string>
    <string name="subscritos">Subscritos</string>
    <string name="seguidores">Seguidores</string>
    <string name="erro">Erro, Tente Novamente Mais Tarde!</string>
    <string name="a_seguir">A seguir</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="biografia">Biografia</string>
    <string name="ofertas">Ofertas</string>
    <string name="perguntas">Perguntas</string>
    <string name="privacidade_seguranca">Privacidade e Segurança</string>
    <string name="acessibilidade">Acessibilidade</string>
    <string name="geral">Geral</string>
    <string name="privacidade">Privacidade</string>
    <string name="visualizacao_som">Visualização e Som</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="opcao_criar_quiz">Criar Quiz</string>
    <string name="opcao_listar_quizes">Listar Quizes</string>
    <string name="opcao_criar_post">Criar Post</string>
    <string name="opcao_listar_posts">Listar Posts</string>
    <string name="outros">Outros...</string>
    <string name="criar_quiz">Criar Quiz</string>
    <string name="passo_1_3">Passo 1/3</string>
    <string name="titulo_do_quiz">Titulo do Quiz</string>
    <string name="tema_do_quiz">Tema do Quiz</string>
    <string name="passo_seguinte">Passo Seguinte</string>
    <string name="titulo_da_introducao">Titulo da Introdução</string>
    <string name="titulo_pergunta">Título Pergunta</string>
    <string name="solucao_da_pergunta">Solução da Pergunta</string>
    <string name="opcoes_da_pergunta">Opções da Pergunta</string>
    <string name="xp_da_pergunta">XP da Pergunta</string>
    <string name="passo_anterior">Passo Anterior</string>
    <string name="id_da_pergunta">ID da Pergunta .:</string>
    <string name="opcoes_de_resposta">Opções de Resposta</string>
    <string name="configuracao_da_pergunta">Configuração da Pergunta</string>
    <string name="descricao_do_quiz_resumo">Descrição do Quiz (Resumo)</string>
    <string name="video_descritivo_link">Vídeo Descritivo (Link)</string>
    <string name="adicionar_opcao">Adicionar Opção</string>
    <string name="remover_opcao">Remover Opção</string>
    <string name="definir_solucao">Definir Solução</string>
    <string name="nova_pergunta">Nova Pergunta</string>
    <string name="postagem">Postagem</string>
    <string name="criar">Criar</string>
    <string name="descricao">Descrição</string>
    <string name="aviso_post">As postagens criadas nesta app, serão de imediato mostradas a todos os utilizadores da mesma.</string>
    <string name="titulo">Título....</string>
    <string name="aviso">Aviso</string>
    <string name="opcao_criar_tt">Criar TT</string>
    <string name="opcao_listar_tt">Listar TT</string>
    <string name="tema">Tema</string>
    <string name="nome_do_tema">Nome do Tema</string>
    <string name="tag">Tag</string>
    <string name="criar_tema">Criar Tema!</string>
    <string name="criar_tag">Criar Tag!</string>
    <string name="listar">Listar</string>
    <string name="confirmar_edicao">Confirmar Edição</string>
    <string name="lista_fazeres">Lista de Fazeres</string>
    <string name="informacoes_gerais">Informações Gerais</string>
    <string name="opcao_contas">Contas</string>
    <string name="empresas">Empresas</string>
    <string name="quizes">Quizes</string>
    <string name="posts">Posts</string>
    <string name="inscricoes_texto">Selecione abaixo, as linguagens\nque tem curiosidade em aprender.</string>
    <string name="inscricoes">Inscrições</string>
    <string name="moderadores">Mods</string>
    <string name="administradores">Admins</string>
    <string name="posts_por_aceitar">Posts por Aceitar</string>
    <string name="tags_e_temas"><![CDATA[Tags & Temas]]></string>
    <string name="aviso_contas">As contas mostradas abaixo, serão \n consoante os seus privilégios.</string>
    <string name="tags_temas">Tags e/ou Temas</string>
    <string name="verificar">Verificar</string>
    <string name="postagens">Postagens</string>
    <string name="info_verificar_posts">Os Posts mostrados abaixo, podem ser recusados ou aceites, consoante a sua pertinência.</string>
    <string name="atualizar_cor_perfil">Atualizar Cor Perfil</string>
    <string name="atualizar_cor_fundo_perfil">Atualizar Cor Fundo Perfil</string>
    <string name="slogan_avaliacao_quiz">Parabéns, chegou ao fim de mais um quiz, agora chegou a altura de realizar uma avaliação do mesmo.</string>
    <string name="avaliacao_final">Avaliação Final</string>
    <string name="descricao_avaliacao">Insira um valor de 1 a 5.</string>
    <string name="agradecimentos_avaliacao_quiz">A Administração da Code4All agradece a realização de este quiz, pois melhora a receção deste para outros utilizadores.</string>
    <string name="finalizados">Finalizados</string>
    <string name="limpar_selecao">Limpar Seleção</string>
    <string name="confirmar_selecao">Confirmar Seleção</string>
    <string name="seguir">Seguir</string>
    <string name="gosto">Gosto</string>
    <string name="comentar">Comentar</string>
    <string name="comentarios">Comentários</string>
    <string name="opcao_criar_notificacao">Criar Info</string>
    <string name="opcao_listar_notificacoes">Listar Infos</string>
    <string name="notificacao">Notificação</string>
    <string name="descricao_hint">Descrição...</string>
    <string name="criar_notificacao">Criar Notificação</string>
    <string name="editar">Editar</string>
    <string name="quiz">Quiz</string>
    <string name="guardar_configuracoes">Guardar Configurações</string>
    <string name="esquecer_password">Esquecer Password</string>
    <string name="configuracao_da">Configuração da</string>
    <string name="listar_ofertas">Listar Ofertas</string>
    <string name="criar_oferta">Criar Oferta</string>
    <string name="slogan_contas_empresa">As contas presentes abaixo, pertecem aos diversos utilizadores desta app.</string>
    <string name="slogan_criar_oferta">Clique na conta, para a qual pretende realizar uma oferta.</string>
    <string name="selecionar_conta">Selecionar Conta</string>
    <string name="slogan_listar_ofertas">Na listagem de baixo, apresentam-se todas as ofertas realizadas por esta empresa.</string>
    <string name="observacoes">Observações</string>
    <string name="ofertas_pendentes">Ofertas Pendentes</string>
    <string name="slogan_ofertas_empresa">As ofertas mostradas abaixo, foram aceites previamente pelo o utilizador.</string>
    <string name="mensagem">Mensagem...</string>
    <string name="oferta_do_a">Oferta do(a)</string>
    <string name="confirmar_alteracoes">Confirmar Alterações</string>
    <string name="visualizar_oferta">Visualizar Oferta</string>
    <string name="modificar_inscricoes">Modificar Inscrições</string>
    <string name="alterar_password">Alterar Password</string>
    <string name="remover_conta">Remover Conta</string>
    <string name="enviar_email">Enviar Email!</string>
    <string name="subscricoes">Subscrições</string>
    <string name="subscricoes_atuais">Subscrições Atuais : </string>
    <string name="slogan_quizes_populares">Os quizes estão ordenados consoante a sua avaliação.</string>
    <string name="aviso_email">Aceito que o meu email seja partilhado com as Empresas e a Administração!</string>
    <string name="partilhar_linkedin">Partilhar LinkedIn</string>
    <string name="pesquisar_post">Pesquisar Post...</string>
    <string name="pesquisar_contas">Pesquisar Contas..</string>
    <string name="pesquisar_empresa">Pesquisar Empresa...</string>
    <string name="slogan_empresas">Aqui são mostradas todas as empresas registadas nesta app.</string>
    <string name="pesquisar_quiz">Pesquisar Quiz...</string>
    <string name="pesquisar_notificacoes">Pesquisar Notificações...</string>
    <string name="redes_sociais">Redes Sociais</string>
    <string name="sobre">Olá, eu sou o José Xavier, o criador desta app e também estudante da ETPC no curso TGPSI.\nA Code4All foi realizada como projeto final de aptidão profissional.\nO meu objetivo de vida é ser um Engenheiro de Software de sucesso!</string>
    <string name="opcao_sobre">Sobre</string>
    <string name="slogan_quizes_subscritos">Aqui são mostrados os quizes em que você se encontra matriculado.</string>
    <string name="slogan_quizes_finalizados">Aqui são mostrados os quizes que já foram finalizados por si.</string>
    <string name="slogan_forum">Aqui são apresentadas as várias publicações dos diversos utilizadores que utilizam a Code4All.</string>
    <string name="slogan_pontuacao">Top 10 Utilizadores</string>
</resources>