<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context="com.josexavier.code4all.activity.EditarQuizActivity">

        <TextView
            android:id="@+id/textViewTituloEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/editar"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewSubTituloEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/quiz"
            android:textAlignment="center"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageViewEditarQuiz"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/retangulo_laranja"
            android:padding="8dp"
            android:src="@drawable/ic_imagem" />

        <EditText
            android:id="@+id/editTextTituloQuizEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/borda_preta"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/titulo_do_quiz"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextTituloIntroducaoEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_preta"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/titulo_da_introducao"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextDescricaoEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_preta"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/descricao_do_quiz_resumo"
            android:inputType="textMultiLine"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editTextVideoEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/borda_preta"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/video_descritivo_link"
            android:inputType="text"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirmarEditarQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/retangulo_laranja_escuro"
            android:padding="16dp"
            android:text="@string/confirmar_edicao"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>