<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.josexavier.code4all.fragment.EmpresasFragment">

    <TextView
        android:id="@+id/textViewAvisoCriarPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/empresas"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textViewSloganEmpresas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/slogan_empresas"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextPesquisarEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/borda_preta"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/pesquisar_empresa"
        android:padding="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEmpresas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>